--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -6,8 +6,8 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>
-    Material Dashboard Dark Edition by Creative Tim
+  <title id="title">
+    Home
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -375,6 +375,9 @@
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
   <script src="../assets/demo/demo.js"></script>
   <script src="../assets/js/myjs.js"></script>
+
+  
+  
   
   <script>
     $(document).ready(function() {
